# super-pipe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  gcp_docker_build_commands.bash  pyproject.toml  requirements.txt  setup.py
.github/actions/blocks/: action.yml
.github/actions/blocks-quickstart/: action.yml  blocks.py
.github/actions/container-image/: action.yml
.github/actions/deploy-container/: action.yml
.github/actions/deploy-flows/: action.yml
.github/workflows/: blocks-quickstart.yml  blocks.yml  container-image.yml  deploy-container.yml  deploy-flows.yml  getting-started.yml  main.yml
.prefect/: flows.json
docs/: LOCAL_DEV_ENV.md
notebooks/: explore.ipynb  load_gcs_data.ipynb
src/blocks/: cloud_run_block.py  docker_block.py  gcp_block.py  gh_block.py
src/core/cornershop/: items.py  main.py
src/core/duckdb/: golden_layer.py  silver_layer.py  utils.py
src/core/google_bigquery/: main.py
src/core/google_cloud_storage/: main.py
src/deployments/: cloud_deployment_.py  cloudrun_deployment copy.py  cloudrun_deployment.py  docker_deployment.py  full_docker_deployment.py  local_deployment.py
src/flows/: CornerShop.py  fetch_data_to_gcs.py  run_corner_shop_flow.py  test.py
src/utils/: create_blocks.py
